fix: layout bugfixes

--- a/src/app/components/component-documentation/ComponentDocumentation.scss
+++ b/src/app/components/component-documentation/ComponentDocumentation.scss
@@ -85,7 +85,7 @@ $fixed-content-height: 348rem;
   .neon-tab {
     width: 100%;
     max-width: 1023rem;
-    margin: auto;
+    margin: 0 auto;
   }
 
   & > .neon-tab {
